Make error message less ambiguous

https://bugzilla.gnome.org/show_bug.cgi?id=625095